fix navbar alignment and add hover style

--- a/pages/ContactsPage/style.css
+++ b/pages/ContactsPage/style.css
@@ -1,4 +1,4 @@
-/* Hedieh Style Start */
+/* Hedieh's Style Start */
 .navBar {
     display: flex;
     width: 100%;
@@ -11,15 +11,21 @@
     line-height: 20px;
     text-transform: uppercase;
     justify-content: space-around;
-
 }
 
 .navBar a {
-text-decoration: none;
-color: #212220;
-padding: 3px 5px;
+    text-decoration: none;
+    color: #212220;
+    padding: 3px 5px;
+    transition: color .3s;
+    border-bottom: 5px solid transparent;
+}
+
+.navBar a:hover {
+    color: #a6ac3b;
 }
 
 .contactLink {
-border-bottom: 5px solid #C8CD49;
+    border-bottom: 5px solid #C8CD49 !important;
 }
+/* Hedieh's Styles End */ 
