--- a/pages/MenuPage/style.css
+++ b/pages/MenuPage/style.css
@@ -1,12 +1,3 @@
-@font-face {
-    font-family: 'BonVivant Bold';
-    src: url(../../assets/fonts/BonVivantSerif-Bold.otf);
-}
-@font-face {
-    font-family: 'BonVivant';
-    src: url(../../assets/fonts/BonVivantSerif.otf);
-}
-
 body {
     font-family: 'BonVivant', sans-serif;
     font-size: 12px;
@@ -14,13 +5,7 @@ body {
 
 
 
-
-
-
-
-
-
-/* Hedieh Style Start */
+/* Hedieh's Style Start */
 .navBar {
     display: flex;
     width: 100%;
@@ -33,15 +18,20 @@ body {
     line-height: 20px;
     text-transform: uppercase;
     justify-content: space-around;
-
 }
 
 .navBar a {
-text-decoration: none;
-color: #212220;
-padding: 3px 5px;
+    text-decoration: none;
+    color: #212220;
+    transition: color .3s;
+    border-bottom: 5px solid transparent;
+}
+
+.navBar a:hover {
+    color: #a6ac3b;
 }
 
 .menuLink {
-border-bottom: 5px solid #C8CD49;
+    border-bottom: 5px solid #C8CD49 !important;
 }
+/* Hedieh's Styles End */ 
